--- a/ECommerce/src/components/Navbar/Navbar.css
+++ b/ECommerce/src/components/Navbar/Navbar.css
@@ -10,6 +10,7 @@
 }
 
 .container {
+  position:relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -61,4 +62,14 @@
   height: 42px;
   border-radius: 100%;
   overflow: hidden;
+}
+.dialog{
+  position: absolute !important;
+  top: calc(100% + -44px); /* Adjust the offset as needed */
+  left: 90%;
+  transform: translateX(-50%);
+  background-color: white;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
