--- a/ECommerce/src/pages/Login/Login.css
+++ b/ECommerce/src/pages/Login/Login.css
@@ -37,4 +37,22 @@
   .custom-button:hover {
     border-color: #3182ce;
   }
+  .custom-button1 {
+    font-size: 1rem;
+    width: 30rem;
+    height: 280px;
+    letter-spacing: 0.05em;
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    cursor: pointer;
+    transition-duration: 0.3s;
+  }
   
+  .custom-button1:hover {
+    border-color: #3182ce;
+  }
